# StoryMesh

./: --help  .env.example  .gitignore  Branch-Notes.md  LICENSE  README.md  langgraph.json  pyproject.toml  storymesh.config.yaml  storymesh.config.yaml.example  storymesh_whitepaper.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
plans/: Add-Pass-4-To-Genre-Resolution.md  Additional-Pipeline-Refinement.md  BookFetcherAgent-Plan.md  BookFetcherAgent-Revision-BookRankerPlan.md  CharacterRefinementPass.md  CoverArtAgent-Plan.md  LLM-Call-Logging.md  OpenAI-Integration.md  Pipeline-Hardening-Plan.md  ProposalDraftAgent-Plan.md  Refine-Pass-1.md  Rubric-Grading-Evals.md  Stylistic-Update-Plan.md  ThemeExtractor-Patch1.md  ThemeExtractorAgent-Plan.md  Voice-Profile-Plan.md  prose_pipeline_implementation_plan.md  prose_pipeline_redesign_proposal.md  resonance_reviewer_concept.md  resonance_reviewer_implementation_plan.md
src/storymesh/: __init__.py  cli.py  config.py  exceptions.py  version.py
tests/: conftest.py  test_anthropic.py  test_artifacts.py  test_book_assembler_agent.py  test_book_fetcher_agent.py  test_book_fetcher_client.py  test_book_ranker_agent.py  test_book_ranker_scorer.py  test_cli.py  test_config.py  test_cover_art_agent.py  test_email_delivery.py  test_fakellmclient.py  test_generate.py  test_genre_normalizer_agent.py  test_genre_normalizer_loader.py  test_genre_normalizer_normalizer.py  test_genre_normalizer_resolver.py  test_genre_normalizer_tone_merge.py  test_graph.py  test_import.py  test_llm_registry.py  test_openai_client.py  test_pipeline.py  test_prompt_loader.py  test_proposal_draft_agent.py  test_proposal_reader_agent.py  test_rerun.py  test_rubric_judge_agent.py  test_run_inspector.py  test_schemas_book_assembler.py  test_schemas_book_fetcher.py  test_schemas_book_ranker.py  test_schemas_cover_art.py  test_schemas_genre_normalizer.py  test_schemas_proposal_draft.py  test_schemas_rubric_judge.py  test_schemas_theme_extractor.py  test_schemas_voice_profile.py  test_story_writer_agent.py  (+5 more)
tests/kiosk/: test_api_contract.py  test_jobs.py
tests/llm_clients/: test_anthropic_real_api.py  test_generate.py  test_openai_real_api.py
tests/tests_llm_clients/: test_anthropic_real_api.py
(+188 files in other folders)
