[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storymesh"
version = "0.6.0"
description = "Production-grade agentic AI workflow for generating original fiction synopses."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Kali McLennan"}]

dependencies = [
    "pydantic>=2.0",
    "orjson",
    "rapidfuzz",
    "diskcache",
    "httpx",
    "typer",
    "python-dotenv",
    "pyyaml",
    "langgraph>=0.2",
    "rich",
]

[project.optional-dependencies]
openai = ["openai>=2.24.0"]
anthropic = ["anthropic>=0.84.0"]
gemini = ["google-generativeai>=0.8.6"]
langsmith = ["langsmith>=0.1"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "langsmith>=0.1"]
all-providers = ["anthropic>=0.84.0", "openai>=2.24.0", "google-generativeai>=0.8.6"]
langgraph-studio = ["langgraph-cli[inmem]"]

[project.scripts]
storymesh = "storymesh.cli:app"

[tool.ruff]
target-version = "py312"
# I absolutely despise 88 character lines. I find it makes readability much worse.
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing"
markers = [
    "real_api: mark as tests that hit real API endpoints"
]

[tool.mypy]
python_version = "3.12"
strict = true
